NB Reporting: - KZT Form 2 and 3 finished

--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -24,7 +24,7 @@
                 <!--</a>-->
             </li>
             <li style="padding-top: 1%; padding-bottom: 1%; padding-left: 1%;">
-                <span style="color: #7B7A7A; font-family: Arial; font-weight: bold; font-size: medium;">NATIONAL | INVESTMENT | CORPORATION</span>
+                <span style="color: #7B7A7A; font-family: Arial; font-weight: bold; font-size: medium;">NATIONAL INVESTMENT CORPORATION</span>
                 <!--<a href="#about">-->
                 <!--<h4><span class="label label-primary">NIC System</span></h4>-->
                 <!--<img th:src="@{/img/nic-name-logo.png}" height="40" width="600"/>-->
