NB Reporting: - KZT Form 13 done (IFRS-9)

--- a/nicnbk-ui-angular2/src/app/reporting/view/consolidated.kzt.form.13.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/consolidated.kzt.form.13.nb.reporting.component.html
@@ -53,6 +53,7 @@
                         <td rowspan="2">Дата окончания</td>
                         <td rowspan="2">Ставка вознаграждения (годовых)</td>
                         <td rowspan="2">Количество выплат вознаграждения в году</td>
+                        <td rowspan="2">Валюта</td>
                         <td colspan="8">Остаток на начало отчетного периода</td>
                         <td colspan="7">Обороты</td>
                         <td colspan="8">Остаток на конец отчетного периода</td>
@@ -65,7 +66,7 @@
                         <td>Вознаграждение</td>
                         <td>Положительная переоценка</td>
                         <td>Отрицательная переоценка</td>
-                        <td>Итого (гр.10+гр.11+гр.12+гр.13+гр.14+гр.15)</td>
+                        <td>Итого (гр.11+гр.12+гр.13+гр.14+гр.15+гр.16)</td>
                         <td>Количество</td>
                         <td>Сумма основного долга/номинальная стоимость</td>
                         <td>Дисконт</td>
@@ -73,14 +74,14 @@
                         <td>Вознаграждение</td>
                         <td>Положительная переоценка</td>
                         <td>Отрицательная переоценка</td>
-                        <td>Количество (гр.9+гр.17)</td>
-                        <td>Сумма основного долга/номинальная стоимость (гр.10+гр.18)</td>
-                        <td>Дисконт (гр.11+гр.19)</td>
-                        <td>Премия (гр.12+гр.20)</td>
-                        <td>Вознаграждение (гр.13+гр.21)</td>
-                        <td>Положительная переоценка (гр.14+гр.22)</td>
-                        <td>Отрицательная переоценка (гр.15+гр.23)</td>
-                        <td>Итого (гр.25+гр.26+гр.27+гр.28+гр.29+гр.30)</td>
+                        <td>Количество (гр.10+гр.18)</td>
+                        <td>Сумма основного долга/номинальная стоимость (гр.11+гр.19)</td>
+                        <td>Дисконт (гр.12+гр.20)</td>
+                        <td>Премия (гр.13+гр.21)</td>
+                        <td>Вознаграждение (гр.14+гр.22)</td>
+                        <td>Положительная переоценка (гр.15+гр.23)</td>
+                        <td>Отрицательная переоценка (гр.16+гр.24)</td>
+                        <td>Итого (гр.26+гр.27+гр.28+гр.29+гр.30+гр.31)</td>
                     </tr>
                     <tr>
                         <td>1</td>
@@ -114,6 +115,7 @@
                         <td>29</td>
                         <td>30</td>
                         <td>31</td>
+                        <td>32</td>
                     </tr>
                     <tr *ngFor="let record of records">
                         <td>{{record.accountNumber}}</td>
@@ -124,6 +126,7 @@
                         <td>{{record.endPeriod}}</td>
                         <td>{{record.interestRate}}</td>
                         <td>{{record.interestPaymentCount}}</td>
+                        <td>{{record.currency}}</td>
                         <td>&nbsp;</td>
                         <td>{{record.debtStartPeriod != null && record.debtStartPeriod != 0 ? (record.debtStartPeriod | number:'1.2-2') : ''}}</td>
                         <td>&nbsp;</td>
@@ -165,6 +168,7 @@
                         <td rowspan="2">Дата окончания</td>
                         <td rowspan="2">Ставка вознаграждения (годовых)</td>
                         <td rowspan="2">Количество выплат вознаграждения в году</td>
+                        <td rowspan="2">Валюта</td>
                         <td colspan="3">Остаток на начало отчетного периода</td>
                         <td colspan="2">Обороты</td>
                         <td colspan="3">Остаток на конец отчетного периода</td>
@@ -177,7 +181,7 @@
                         <td>Вознаграждение</td>
                         <!--<td>Положительная переоценка</td>-->
                         <!--<td>Отрицательная переоценка</td>-->
-                        <td>Итого (гр.10+гр.11+гр.12+гр.13+гр.14+гр.15)</td>
+                        <td>Итого (гр.11+гр.12+гр.13+гр.14+гр.15+гр.16)</td>
                         <!--<td>Количество</td>-->
                         <td>Сумма основного долга/номинальная стоимость</td>
                         <!--<td>Дисконт</td>-->
@@ -186,13 +190,13 @@
                         <!--<td>Положительная переоценка</td>-->
                         <!--<td>Отрицательная переоценка</td>-->
                         <!--<td>Количество (гр.9+гр.17)</td>-->
-                        <td>Сумма основного долга/номинальная стоимость (гр.10+гр.18)</td>
+                        <td>Сумма основного долга/номинальная стоимость (гр.11+гр.19)</td>
                         <!--<td>Дисконт (гр.11+гр.19)</td>-->
                         <!--<td>Премия (гр.12+гр.20)</td>-->
-                        <td>Вознаграждение (гр.13+гр.21)</td>
+                        <td>Вознаграждение (гр.14+гр.22)</td>
                         <!--<td>Положительная переоценка (гр.14+гр.22)</td>-->
                         <!--<td>Отрицательная переоценка (гр.15+гр.23)</td>-->
-                        <td>Итого (гр.25+гр.26+гр.27+гр.28+гр.29+гр.30)</td>
+                        <td>Итого (гр.26+гр.27+гр.28+гр.29+гр.30+гр.31)</td>
                     </tr>
                     <tr>
                         <td>1</td>
@@ -203,29 +207,30 @@
                         <td>6</td>
                         <td>7</td>
                         <td>8</td>
+                        <td>9</td>
                         <!--<td>9</td>-->
-                        <td>10</td>
+                        <td>11</td>
                         <!--<td>11</td>-->
                         <!--<td>12</td>-->
-                        <td>13</td>
+                        <td>14</td>
                         <!--<td>14</td>-->
                         <!--<td>15</td>-->
-                        <td>16</td>
+                        <td>17</td>
                         <!--<td>17</td>-->
-                        <td>18</td>
+                        <td>19</td>
                         <!--<td>19</td>-->
                         <!--<td>20</td>-->
-                        <td>21</td>
+                        <td>22</td>
                         <!--<td>22</td>-->
                         <!--<td>23</td>-->
                         <!--<td>24</td>-->
-                        <td>25</td>
+                        <td>26</td>
                         <!--<td>26</td>-->
                         <!--<td>27</td>-->
-                        <td>28</td>
+                        <td>29</td>
                         <!--<td>29</td>-->
                         <!--<td>30</td>-->
-                        <td>31</td>
+                        <td>32</td>
                     </tr>
                     <tr *ngFor="let record of records">
                         <td>{{record.accountNumber}}</td>
@@ -236,6 +241,7 @@
                         <td>{{record.endPeriod}}</td>
                         <td>{{record.interestRate}}</td>
                         <td>{{record.interestPaymentCount}}</td>
+                        <td>{{record.currency}}</td>
                         <!--<td>&nbsp;</td>-->
                         <td>{{record.debtStartPeriod != null && record.debtStartPeriod != 0 ? (record.debtStartPeriod | number:'1.2-2') : ''}}</td>
                         <!--<td>&nbsp;</td>-->
