--- a/nicnbk-ui-angular2/src/app/hf/view/hf.screening.filters.edit.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.screening.filters.edit.component.html
@@ -38,7 +38,7 @@
                 <div class="col-md-6">
                     <table class="table table-hover">
                         <tr>
-                            <td>Fund AUM, $</td>
+                            <td>Strategy AUM, $</td>
                             <td><input class="form-control"  required type="text" name="fundAUM" [(ngModel)]="filteredResult.fundAUM"
                                        (keyup)="onNumberChangeFundAUM()"/></td>
                         </tr>
