--- a/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="showMemo()">
     <div class="col-md-12">
         <div class="row">
             <div class="row top-buffer" >
