Added currency rates forms Fund AUM editing

--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -149,6 +149,9 @@
                 <li [routerLinkActive]="['active']" *ngIf="showCorpMeeting()">
                     <a [routerLink]="['/corpMeetings']" data-toggle="tooltip" title="Corp Meetings">Corp Meetings</a>
                 </li>
+                <li [routerLinkActive]="['active']">
+                    <a [routerLink]="['/lookups']" data-toggle="tooltip" title="Lookups">Lookups</a>
+                </li>
             </ul>
         </div>
     </nav>
